@@ -8,4 +8,6 @@ Michael Pruett <michael@68k.org>
 Michail Pishchagin <mblsha@gmail.com>
 Sebastian Delmont <sd@notso.net>
 Stefan Saasen <s@juretta.com>
+Terry Donoghue <donoghue@apple.com>
 Vincent Isambart <vincent.isambart@gmail.com>
+Wes Rogers <wesrog@gmail.com>
